--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "laravel-vite-plugin": "^0.7.8",
+        "vite": "^4.4.9"
+    },
+    "dependencies": {
+        "@jridgewell/sourcemap-codec": "^1.4.15",
+        "cross-env": "^7.0.3",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.2.2",
+        "vue-template-compiler": "^2.7.14"
     }
 }
